2006-04-05  Vlad Seryakov  <seryakov@users.sf.net>

	nsd/tclcache.c:
	nsd/tclcmds.c: Added 2 new cache commands ns_cache_get and
	ns_cache_set for easier cache manipulation

2006-03-30  Ibrahim Tannir <itannir@users.sf.net>

	* nsd/adpeval.c:  added translation binary in ParseFile,
	otherwise reading Windows files may break (size != n).

2006-03-28  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
	
	* nsd/tclresp.c: Fixed bad return value(s) in NsTclHeadersObjCmd
	and WritevObjs. Reformatted and indented.
	
2006-03-27  Bernd Eidenschink  <eide@users.sourceforge.net>

	* contrib/nsd.tcl: Added smtp configuration parameters

2006-03-23  Vlad Seryakov  <seryakov@users.sf.net>

	include/ns.h:
	nsd/conn.c: Added new public API function Ns_ConnSetPeer

2006-03-21  Vlad Seryakov  <seryakov@users.sf.net>

	nsd/binder.c: BindUnix should not delete the socket file otherwise
	clients will not be able to connect to it. Changedd API to support optional
	accesss mode for the Unix domain file. Added DGRAM socket types for
 	Unix domain sockets.

2006-03-19  Vlad Seryakov  <seryakov@users.sf.net>

	include/ns.h:
        nsd/driver.c:
        nsd/conn.c: Added new public functions Ns_DriverSockContent,
        Ns_ConnSockContent and Ns_ConnSetContentSent. Imporved UDP driver
        support.
        
2006-03-18  Vlad Seryakov  <seryakov@users.sf.net>

	nsd/driver.c: Set spoolerthreads to 0 by default
	nsd/sockcallbacks.c: Changed timeout handling
        
2006-03-17  Vlad Seryakov  <seryakov@users.sf.net>

	nsd/sockcallbacks.c:
	nsd/tasks.c: Updated to support timeouts in socket
	callbacks, minor reformats

	configure.in:
        include/ns.h:
        nscp/nscp.c:
        nsd/crypt.c:
        nsperm/nsperm.c: For Linux systems use native crypt which supports
        MD5 digests, increase encryption buffer
        
2006-03-13  Vlad Seryakov  <seryakov@users.sf.net>

	Makefile: Made install modular so parts can be installed
	without installing everything
